# jwtdebug

./: .gitignore  .golangci.yml  .goreleaser.yaml  .goreleaser.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  go.mod  go.sum  main.go
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cmd/jwtdebug/: main.go  main_test.go
docs/: CONFIG.md  jwtdebug.1
internal/cli/: flags.go  flags_test.go  metadata.go
internal/completions/: completions.go  completions_test.go
internal/config/: config.go  config_test.go
internal/constants/: constants.go
internal/parser/: normalize.go  token.go  token_test.go
internal/printer/: claims.go  claims_test.go  expiration.go  expiration_test.go  formatter.go  formatter_test.go  header.go  header_test.go  output.go  output_test.go  print.go  print_test.go  sanitize.go  sanitize_test.go  signature.go  signature_test.go
internal/verification/: signature.go  signature_test.go
scripts/: build-appimage.sh
src/: cli.rs  constants.rs  expiration.rs  main.rs  parser.rs  printer.rs  verification.rs
tests/: cli.rs
