[package]
name = "jwtdebug"
version = "1.2.4"
edition = "2021"
license = "MIT"
description = "A fast, modern command-line utility for decoding and debugging JSON Web Tokens."
repository = "https://github.com/rselbach/jwtdebug"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.51", features = ["derive"] }
jsonwebtoken = "9.3.1"
p521 = "0.14.0-rc.9"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "local-offset", "parsing"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.23.0"
